--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-venv
-*.sqlite3
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+
+# Virtual env
+venv/
+env/
+
+# Django
+db.sqlite3
+*.log
+
+# VSCode
+.vscode/
+
+# Secrets
+.env
